


22.02.2017

x fix sync triger on cover update
+ added ability to save cover from browser clipboard