@@ -264,4 +264,10 @@ SQL;
 		return json_encode($resp);
 	}
 
+	public function actionPhpInfo()
+	{
+	  return $this->renderPartial('phpinfo');
+	}
+	
+	
 }
